--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>BIODATA</h2>
     </header>
 
-    <img class="profile-pic" src="E:\BOOTCAMP\BIODATA\photo.jpeg" alt="My Photo">
+    <img class="profile-pic" src="E:photo.jpeg" alt="My Photo">
     <section>
     <h3>PERSONAL INFORMATION</h3>
     <p><b>Name :</b> Aleena Anna Kuriakose</p>
